<resources>
    <string name="app_name">7 Minute Workout</string>
    <string name="start">Start</string>
    <string name="main_logo">Main Logo</string>
    <string name="get_ready">Get Ready</string>
    <string name="bmi">BMI</string>
    <string name="height_in_cm">HEIGHT (in cm)</string>
    <string name="weight_in_kg">WEIGHT (in kg)</string>
    <string name="calculate">Calculate</string>
    <string name="metric_units">Metric Units</string>
    <string name="us_units">US Units</string>
    <string name="you_are_done">You are done !</string>
</resources>