<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BMI_Calculator"
    android:background="@color/white">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/actionBar"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:theme="@style/ToolbarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:background="@color/white"
        app:titleTextColor="#313131"
        app:title="BMI Calculator" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/actionBar"
        app:layout_constraintVertical_bias="0.13">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/weighttil"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="20dp"
            android:textColorHint="#7E7E7E"
            app:boxStrokeColor="@color/input_box_outline_color"
            app:boxStrokeWidth="1dp"
            app:boxStrokeWidthFocused="2dp"
            app:hintTextColor="@color/accent_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/weightet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/weight_in_kg"
                android:inputType="numberDecimal"
                android:textColor="@color/black"
                android:textCursorDrawable="@null" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/heightinUSunitsLL"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="20dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColorHint="#7E7E7E"
                app:boxStrokeColor="@color/input_box_outline_color"
                app:boxStrokeWidth="1dp"
                app:boxStrokeWidthFocused="2dp"
                app:hintTextColor="@color/accent_color"
                android:hint="Feet">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/heightfeet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@null"
                    android:layout_marginEnd="10dp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColorHint="#7E7E7E"
                app:boxStrokeColor="@color/input_box_outline_color"
                app:boxStrokeWidth="1dp"
                app:boxStrokeWidthFocused="2dp"
                app:hintTextColor="@color/accent_color"
                android:hint="inches">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/heightinches"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@null"
                    android:paddingStart="10dp"/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/heighttil"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="20dp"
            android:textColorHint="#7E7E7E"
            app:boxStrokeColor="@color/input_box_outline_color"
            app:boxStrokeWidth="1dp"
            app:boxStrokeWidthFocused="2dp"
            app:hintTextColor="@color/accent_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/heightet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/height_in_cm"
                android:inputType="numberDecimal"
                android:textColor="@color/black"
                android:textCursorDrawable="@null" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/bmi_result_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/btn_bmi_calculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.305"
        tools:text="TextView"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_bmi_calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/item_green_btn_ripple"
        android:text="@string/calculate"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.341" />

    <TextView
        android:id="@+id/bmi_classification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/btn_bmi_calculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bmi_result_tv"
        android:textColor="#7e7e7e"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <RadioGroup
        android:id="@+id/unitsrg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/actionBar"
        android:background="@drawable/drawable_radio_group_tab_background">

        <RadioButton
            android:id="@+id/metricrb"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/drawable_units_tab_selector"
            android:checked="true"
            android:text="@string/metric_units"
            android:button="@null"
            android:textColor="@drawable/drawable_units_tab_text_color_selector"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <RadioButton
            android:id="@+id/usrb"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/drawable_units_tab_selector"
            android:text="@string/us_units"
            android:button="@null"
            android:textColor="@drawable/drawable_units_tab_text_color_selector"
            android:textSize="16sp"
            android:textStyle="bold"
            android:checked="false"/>
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>